--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
                         href="https://drive.google.com/file/d/1EXYZI8oB0JPAjZzXek2v8nlv6g-irsg4/view?usp=sharing"
                         class="btn btn-primary btn-sm my-3"
                         target="_blank">Download CV</a> -->
+                    
+                    <a href="https://mineex.biz/ref/zaq_Rzz">
+                        <img src="https://mineex.biz/assets/img/MINEEX-728.gif"/>
+                    </a>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320">
